Fix spacing between sections + fix social icons

--- a/css/style.css
+++ b/css/style.css
@@ -2296,8 +2296,8 @@ ul {
   margin-top: 30px;
   grid-column-gap: 40px;
   grid-row-gap: 40px;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
 }
@@ -3781,7 +3781,7 @@ ul {
   }
   .section {
     margin-top: 60px;
-    margin-bottom: 60px;
+    margin-bottom: 0px;
   }
   .hero-desctiption {
     width: auto;
